tests/errors/setchar-err3.src
.IPPcode18
defvar GF@fail
move GF@fail string@something
SETCHAR GF@fail int@5 string@
write GF@fail